# agent_aiops

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  alembic.ini  alertmanager.yml  docker-compose.prod.yml  docker-compose.yml  pom.xml  prometheus.yml  pyproject.toml  rules.yml
.claude/: maintenance_windows.yml  settings.json  tenants.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: audit.py  audit_logger.py  config.py  main.py  self_monitor.py  tenant_store.py
app/agent/: alert_aggregator.py  alert_suppressor.py  cache.py  escalation.py  react_agent.py  supervisor.py  task_templates.py  tools.py
app/api/: admin.py  aiops.py  chat.py  health.py  knowledge.py  metrics.py  session.py  upload.py
app/ingestion/: chunker.py  embedder.py  indexer.py
app/middleware/: auth.py  error_handler.py  logging.py  rate_limit.py
app/models/: schemas.py  tenant.py
app/notify/: __init__.py  dingtalk.py  feishu.py  report_generator.py  wecom.py
app/platform/: itsm.py  itsm_jira.py  plugin.py  plugin_sdk.py  runbook.py  runbook_engine.py  war_room.py  warroom.py
app/rag/: hybrid_search.py  intent.py  rag_tool.py  retrieval.py
app/session/: manager.py
app/skills/: loader.py
app/tools/: change_tools.py  (+11 more)
static/: app.js  dashboard.html  index-v2.html  index.html  runbook-editor.html  styles-v2.css  styles.css
tests/: chaos_test.py  conftest.py  perf_benchmark.py  test_core.py  test_imports.py  test_intent.py  test_middleware.py  test_session.py  test_supervisor.py
(+20 files in other folders)
